@@ -3,6 +3,8 @@
 - Now sporting a JDBC sqlite3 adapter! Thanks Joseph Athman.
 - Added support for InterSystems Cache database (Ryan Bell)
 - Fix for JRUBY-2256
+- JRUBY-1638, JRUBY-2404, JRUBY-2463: schema.table handling and Oracle NUMBER fixes (Thanks Darcy Schultz & Jesse Hu)
+- Add structure dump and other DDL-ish for DB2 (courtesy abedra and stuarthalloway)
 
 == 0.8
 
